--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
+<Files .env>
+    Order allow,deny
+    Deny from all
+</Files>
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
